# stock-to-cryptotaxcalculator.io

./: .gitignore  README.md  import.py  pyproject.toml
src/: etoro-import.py  etoro_import.py
src/config/: config.py  types.py
src/helpers/: csv.py  data_frames.py  date_time.py  stock_market.py  types.py  validation.py  warnings.py
src/parsers/: AbstractDataParser.py  EtoroImport.py  etoro_types.py  types.py
src/parsers/etoro/: EtoroDataParser.py
src/parsers/ibkr/: IbkrDataParser.py  types.py
src/parsers/ig/: AbstractIgDataParser.py  IgCfdDataParser.py  IgDataParser.py  IgSharesDataParser.py  types.py
src/parsers/schwab/: SchwabDataParser.py  types.py
